feat: Implement and test Netlify Function proxy for WHO API

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <h2>Step 2: What is your biological sex?</h2>
             <p>(Needed for average life expectancy data)</p>
             <div class="radio-group">
-                 <label>
-                    <input type="radio" id="sex-male" name="sex" value="MLE" required> Male
+                <label>
+                    <input type="radio" id="sex-male" name="sex" value="SEX_MLE" required> Male
                 </label>
                 <label>
-                    <input type="radio" id="sex-female" name="sex" value="FMLE" required> Female
+                    <input type="radio" id="sex-female" name="sex" value="SEX_FMLE" required> Female
                 </label>
             </div>
             <button onclick="nextStep('step-country')">Next</button>
