--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     </header>
 
     <main>
-        <section id="step-age" class="step active">
+        <section id="step-intro" class="step active">
+            <h2>Discover Your Precious Time</h2>
+            <p>Have you ever stopped to think about the true value of your time? This calculator is designed to give you a unique perspective on the time you might have remaining and how something like unnecessary worry can significantly impact it.</p>
+            <p>Based on average life expectancy data, we'll help you visualize your time in years, days, and hours, and show you the potential cost of spending that time worrying.</p>
+            <p>It's not about predicting the future, but about bringing attention to the present and inspiring you to use your precious moments wisely.</p>
+            <button onclick="nextStep('step-age')">Start Calculation</button>
+        </section>
+
+        <section id="step-age" class="step">
             <h2>Step 1: How old are you?</h2>
             <label for="age">Your current age:</label>
             <input type="number" id="age" name="age" min="1" max="120" required>
@@ -65,6 +73,7 @@
 
     <footer>
         <p>Time is precious. Use it wisely.</p>
+        <p style="font-size: 0.8em; margin-top: 0.5em;">Inspirational quotes provided by <a href="https://zenquotes.io/" target="_blank" style="color: #fff; text-decoration: underline;">ZenQuotes API</a>.</p>
     </footer>
 
     <script src="script.js" defer></script>
